# AskOwlAPI

./: .env.template  Containerfile  LICENCE  README.md  ROADMAP.md  RoadMap_ToDo.md  ToDo.md  compose.yml  main.py  pyproject.toml
docs/: doc_plan.md  index.md
src/: app.py  init.py
src/core/ask/: router.py
src/core/ask/services/: chunking.py  search.py
src/modules/ask/: router.py
src/modules/ask/services/: search.py
src/modules/auth/: model.py  passwd.py  router.py  security.py  service.py
src/modules/identity/: models.py  router.py  shered.py
src/modules/identity/auth/: model.py  passwd.py  router.py  security.py  service.py
src/modules/identity/role/: router.py  service.py
src/modules/identity/user/: model.py  router.py  service.py
src/modules/llm_provider/: dependency.py  factory.py  init_llm_provider.py  model.py  repository.py
src/modules/llm_provider/prompts/: templates.py
src/modules/llm_provider/providers/: base.py  factory.py  ollama.py
src/modules/owl_reranker/: base.py  factory.py  owl_reranker.py
src/modules/role/: model.py  router.py
src/modules/scrapy/: factory.py  init_scrapy.py  model.py  router.py
src/modules/scrapy/providers/: base.py  trafilatura.py
src/modules/search_engine/: factory.py  model.py  router.py
src/modules/search_engine/providers/: base.py  searxng.py
src/modules/user/: model.py  router.py  service.py
src/tools/: cryptography.py  db.py  settings.py
tests/: conftest.py
tests/test_identity/: test_user_endpoints.py
