[project]
name = "askowlapi"
version = "0.1.0"
description = "AskOwl backend API."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.121.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.4",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
]
