[project]
name = "askowlapi"
version = "0.1.0"
description = "AskOwl backend API."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.3",
    "fastapi>=0.121.3",
    "flashrank>=0.2.10",
    "jinja2>=3.1.6",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.0.0",
    "ollama>=0.6.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.4",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.27",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "asyncpg>=0.31.0",
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
